# Steel_Procuremnt_Calculator

./: .gitignore  BOM_Calculator.hpp  CMakeLists.txt  Indian_Structural_Steel_Database.csv  Main.cpp  README.md  bom_core.cp314-win_amd64.pyd  gui.py  python_bridge.cpp  steel_database.hpp  test.py
